deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-leumi-app-deployment
spec:
  replicas: 2  # Number of pod replicas
  selector:
    matchLabels:
      app: bank-leumi-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  # Max pods that can be unavailable during update
      maxSurge: 1  # Max extra pods to be created during update
  template:
    metadata:
      labels:
        app: bank-leumi-app
    spec:
      containers:
      - name: bank-leumi-app
        image: 141330218853.dkr.ecr.us-east-1.amazonaws.com/bank-leumi-project-app:latest # image
        ports:
        - containerPort: 5000 # port exposed
