service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-leumi-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: bank-leumi-app
